--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
 <html lang="en-US">
     <head>
+        <link href="styles/style.css" rel="stylesheet" />
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width">
+        <meta name="description" content="Hello, my name is Allan, currently I'm cousing the wdd 130 couse in byu online university, the purpose of this page is to give a breaf description of myself.">
+        <meta name="author" content="Allan Matos Gomes de Sousa">
         <title> Allan Matos Gomes de Sousa | WDD 130</title>
     </head>
     <body>
@@ -18,6 +21,11 @@
             <img src="images/profile.png" alt = "Allan Matos Gomes de Sousa" width="200">
             <p>Hello, my name is Allan, I'm a Brazilian 18 years boy who enjoys being a computer science student! Practice sports is my hobbie, at this moment my favorite one is muytay!</p>
         </main>
+        <aside>
+            <h2>Brazil</h2>
+            <img src="images/brazil.png" alt="Brazil image">
+            <p>Brazil is an american south country, we were colonized for many nations in the past and because of this we have a huge arsenal of differents cultures and this makes a beautiful diferrence!</p>
+        </aside>
         <footer>
             <p>&copy;2024 🐘 Allan Matos 🐘 Paraíba, Brazil</p>
         </footer>
