--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="en-US">
     <head>
+        <meta charset="utf-8">
         <link rel="stylesheet" href="styles/site-plan-rafting.css">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta charset="utf-8">
-        <title> Rafting Site Plan | Xavier Rodrigues</title>
+        <title> Rafting Site Plan | Allan Matos</title>
         <meta name="author" content="Allan Matos">
+        <meta name="description" content="Rafting companny">
     </head>
     <body>
         <header>
