--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title> Rafting Site Plan | Allan Matos</title>
         <meta name="author" content="Allan Matos">
-        <meta name="description" content="Rafting companny">
+        <meta name="description" content="Experience the thrill of white-water rafting with [Your Company Name]. Explore breathtaking rivers, conquer rapids, and create unforgettable memories with our expert guides. Book your adventure today!">
     </head>
     <body>
         <header>
