--- a/index.html
+++ b/index.html
@@ -14,14 +14,25 @@
                 <a href="#">Home</a>
                 <a href="wwr/">White Water Rafting Website</a>
                 <a href="wwr/site-plan-rafting.html">White Water Rafting Siteplan</a>
+                <a href="https://www.linkedin.com/posts/activity-7040505867439390720-WBY3?utm_source=share&utm_medium=member_desktop">Linkedin</a>
+                <a href="https://facebook.com">facebook</a>
             </nav>
         </header>
         <main>
             <h1>Allan Matos Gomes de Sousa | WDD 130</h1>
             <img src="images/profile.png" alt = "Allan Matos Gomes de Sousa" width="200">
-            <p>Hello, my name is Allan, I'm a Brazilian 18 years boy who enjoys being a computer science student! Practice sports is my hobbie, at this moment my favorite one is muytay!</p>
+            <p>Hello, my name is Allan, I'm a Brazilian 18 years boy who enjoys being a computer science student! Practice sports is my hobbie, at this moment my favorite one is muytay!
+                I'm panning to serve a mission for 2 years next year! I know that tecnology is an area that will grow even more, many working  employments will come and I'm preparing myself 
+                studing this area. I confess myself that since last year I hadn't a contact with computers or something tecnologic but I rtealized that I needed to have more aproximattion 
+                with this area, never is too late to learn a new thing right?! and I don't want to get behind!
+            </p>
+            <ul class="box">
+                <li><a href="https://www.churchofjesuschrist.org/temples/details/recife-brazil-temple?lang=eng" target="_blank">Recife Brazil Temple</a></li>
+                <li><a href="https://www.churchofjesuschrist.org/temples/details/los-angeles-california-temple?lang=eng" target="_blank">Los Angeles California Temple</a></li>
+                <li><a href="https://www.churchofjesuschrist.org/temples/details/salt-lake-temple?lang=eng" target="_blank">Salt Lake Temple</a></li>
+            </ul>
         </main>
-        <aside>
+        <aside class="box">
             <h2>Brazil</h2>
             <img src="images/brazil.png" alt="Brazil image">
             <p>Brazil is an american south country, we were colonized for many nations in the past and because of this we have a huge arsenal of differents cultures and this makes a beautiful diferrence!</p>
@@ -30,4 +41,5 @@
             <p>&copy;2024 🐘 Allan Matos 🐘 Paraíba, Brazil</p>
         </footer>
     </body>
+    <!--29/09/2023-->
 </html>
