--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
     <head>
         <meta charset="utf-8">
-        <link rel="stylesheet" href="styles/site-plan-rafting.css">
+        <link rel="stylesheet" href="styles/rafting.css">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title> Rafting Site Plan | Allan Matos</title>
         <meta name="author" content="Allan Matos">
