--- a/wwr/about.html
+++ b/wwr/about.html
@@ -4,9 +4,9 @@
         <link href="styles/rafting.css" rel="stylesheet" />
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width">
-        <meta name="description" content="Hello, my name is Allan, currently I'm cousing the wdd 130 couse in byu online university, the purpose of this page is to give a breaf description of myself.">
+        <meta name="description" content="This is the about us page, here you will find more recourses about our companny!">
         <meta name="author" content="Allan Matos Gomes de Sousa">
-        <title> Allan Matos Gomes de Sousa | WDD 130</title>
+        <title> About Us</title>
     </head>
     <body>
         <header>
