--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-US">
     <head>
-        <link href="styles/style.css" rel="stylesheet">
+        <link href="styles/style.css" rel="stylesheet"/>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width">
         <meta name="description" content="Hello, my name is Allan, currently I'm cousing the wdd 130 couse in byu online university, the purpose of this page is to give a breaf description of myself.">
