--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-US">
     <head>
-        <link href="styles/style.css" 
-            rel="stylesheet"/>↩     
+        <link href="styles/style.css" rel="stylesheet"/>↩     
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width">
         <meta name="description" content="Hello, my name is Allan, currently I'm cousing the wdd 130 couse in byu online university, the purpose of this page is to give a breaf description of myself.">
@@ -17,7 +16,7 @@
                 <a href="wwr/">Rafting Website</a>
                 <a href="wwr/site-plan-rafting.html">Siteplan</a>
                 <a href="https://www.linkedin.com/posts/activity-7040505867439390720-WBY3?utm_source=share&utm_medium=member_desktop">Linkedin</a>
-                <a href="https://facebook.com">facebook</a>
+                <a href="https://www.facebook.com/profile.php?id=100051349933866">facebook</a>
             </nav>
         </header>
         <div class="grid">
