--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en-US">
     <head>
-        <link href="styles/style.css" rel="stylesheet">↩     
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width">
-        <meta name="description" content="Hello, my name is Allan, currently I'm cousing the wdd 130 couse in byu online university, the purpose of this page is to give a breaf description of myself.">
-        <meta name="author" content="Allan Matos Gomes de Sousa">
-        <title> Allan Matos Gomes de Sousa | WDD 130</title>
+        <link href="styles/style.css" rel="stylesheet"/>↩     
+        <meta charset="UTF-8"/>
+        <meta name="viewport" content="width=device-width"/>
+        <meta name="description" content="Hello, my name is Allan, currently I'm cousing the wdd 130 couse in byu online university, the purpose of this page is to give a breaf description of myself."/>
+        <meta name="author" content="Allan Matos Gomes de Sousa"/>
+        <title> Allan Matos Gomes de Sousa | WDD 130</title/>
         
     </head>
     <body>
