--- a/wwr/about.html
+++ b/wwr/about.html
@@ -9,35 +9,56 @@
         <title> About Us</title>
     </head>
     <body>
+        <!-- OK-->
         <header>
             <img src="images/logo.png" alt="Logo">
             <nav>
-                <a href="index.html">Home Page</a>
-                <a href="about.html">About Us</a>
-                <a href="trips.html">Trips</a>
-                <a href="contact.html">Contact</a>
+                <ul class="navigation">
+                    <a href="index.html">Home Page</a>
+                    <a href="about.html">About Us</a>
+                    <a href="trips.html">Trips</a>
+                    <a href="contact.html">Contact</a>
+                </ul>
             </nav>
         </header>
+        <!-- -->
         <main>
-            <div class="hero">
-                <img src="images/hero.png" alt="Hero">
+            <div>
                 <h1>Rafting Team</h1>
+                <img class="hero" src="images/img3.png" alt="Hero">
                 <article>
                     <img src="images/teacher.png" alt="Happy Instructor">
-                    <p> element with the company purpose, mission, creed, motto, etc.</p>
+                    <p> element with the company purpose, mission, creed, motto, etc. ele-
+                        ment with the company purpose, mission, creed, motto, etc element 
+                        with the company purpose, mission, creed, motto, etc element with 
+                        the company purpose, mission, creed, motto, etc element with the 
+                        company purpose, mission, creed, motto, etc element with the compa-
+                        ny purpose, mission, creed, motto, etc element with the company pur-
+                        pose, mission, creed, motto, etc element with the company purpose, 
+                        mission, creed, motto, etc element with the company purpose, mission, 
+                        creed, motto, etc element with the company purpose, mission, creed, 
+                        smotto, etc</p>
                 </article>
             </div>
-            <section>
+            <section class="box">
                 <h2>History</h2>
-                <p>element with a brief history of the company.</p>
+                <img src="images/logo.png" alt="Logo">
+                <p>element with a brief history of the company element with a brief history
+                   of the company element with a brief history of the company element with 
+                   a brief history of the company element with a brief history of the com-
+                   pany element .</p>
+                <p>with a brief history of the company element with a brief 
+                    history of the company element with a brief history of the company ele-
+                    ment with a brief history of the company element with a brief history of
+                    the company</p>
             </section>
-            <section>
-                <h2>Adventure Awaits You!</h2>
-                <img src="images/img1.png" alt="White Water Rafting1">
-                <img src="images/img2.png" alt="White Water Rafting2">
-                <img src="images/img3.png" alt="White Water Rafting3">
-                <img src="images/img4.png" alt="White Water Rafting4">
-                <img src="images/img5.png" alt="White Water Rafting5">
+            <section class="box">
+                <h2 class="pix">Adventure Awaits You!</h2>
+                <img class="img1" src="images/img1.png" alt="White Water Rafting1">
+                <img class="img2" src="images/img2.png" alt="White Water Rafting2">
+                <img class="img3" src="images/img3.png" alt="White Water Rafting3">
+                <img class="img4" src="images/img4.png" alt="White Water Rafting4">
+                <img class="img5" src="images/img5.png" alt="White Water Rafting5">
             </section>
         </main>
         <footer>
