--- a/wwr/about.html
+++ b/wwr/about.html
@@ -60,6 +60,9 @@
                 <img class="img4" src="images/img4.png" alt="White Water Rafting4">
                 <img class="img5" src="images/img5.png" alt="White Water Rafting5">
             </section>
+            <figure>
+                
+            </figure>
         </main>
         <footer>
             <p>&copy;2023 🚣‍♂️ Rafting Team 🚣‍♂️ Allan Matos </p>
