--- a/index.html
+++ b/index.html
@@ -1,48 +1,47 @@
 <!DOCTYPE html>
 <html lang="en-US">
-    <head>
-        <link href="styles/style.css" rel="stylesheet"/>↩     
-        <meta charset="UTF-8"/>
-        <meta name="viewport" content="width=device-width"/>
-        <meta name="description" content="Hello, my name is Allan, currently I'm cousing the wdd 130 couse in byu online university, the purpose of this page is to give a breaf description of myself."/>
-        <meta name="author" content="Allan Matos Gomes de Sousa"/>
-        <title> Allan Matos Gomes de Sousa | WDD 130</title>
-        
-    </head>
-    <body>
-        <header>
-            <nav>
-                <a href="#">Home</a>
-                <a href="wwr/">Rafting Website</a>
-                <a href="wwr/site-plan-rafting.html">Siteplan</a>
-                <a href="https://www.linkedin.com/posts/activity-7040505867439390720-WBY3?utm_source=share&utm_medium=member_desktop">Linkedin</a>
-                <a href="https://www.facebook.com/profile.php?id=100051349933866">facebook</a>
-            </nav>
-        </header>
-        <div class="grid">
-            <main>
-                <h1>Allan Matos Gomes de Sousa | WDD 130</h1>
-                <img src="images/profile.png" alt = "Allan Matos Gomes de Sousa" width="200">
-                <p>  ' ' 'Hello, my name is Allan, I'm a Brazilian 18 years boy who enjoys being a computer science student! Practice sports is my hobbie, at this moment my favorite one is muytay!
-                    I'm panning to serve a mission for 2 years next year! I know that tecnology is an area that will grow even more, many working  employments will come and I'm preparing myself 
-                    studing this area. I confess myself that since last year I hadn't a contact with computers or something tecnologic but I rtealized that I needed to have more aproximattion 
-                    with this area, never is too late to learn a new thing right?! and I don't want to get behind! enchendpo linguissa enchendpo linguissa enchendpo linguissa enchendpo linguissa enchendpo linguissa enchendpo linguissa
-                </p>
-                <ul class="box">
-                    <li><a href="https://www.churchofjesuschrist.org/temples/details/recife-brazil-temple?lang=eng" target="_blank">Recife Brazil Temple</a></li>
-                    <li><a href="https://www.churchofjesuschrist.org/temples/details/los-angeles-california-temple?lang=eng" target="_blank">Los Angeles California Temple</a></li>
-                    <li><a href="https://www.churchofjesuschrist.org/temples/details/salt-lake-temple?lang=eng" target="_blank">Salt Lake Temple</a></li>
-                </ul>
-            </main>
-            <aside class="box">
-                <h2>Brazil</h2>
-                <img src="images/brazil.png" alt="Brazil image">
-                <p>Brazil is an american south country, we were colonized for many nations in the past and because of this we have a huge arsenal of differents cultures and this makes a beautiful diferrence!</p>
-            </aside>
-        </div>
-        <footer>
-            <p>&copy;2024 🐘 Allan Matos 🐘 Paraíba, Brazil</p>
-        </footer>
-    </body>
-    <!--29/09/2023-->
+<head>
+    <link href="styles/style.css" rel="stylesheet">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width">
+    <meta name="description" content="Hello, my name is Allan, currently I'm taking the WDD 130 course at BYU online university. The purpose of this page is to give a brief description of myself." itemprop="description">
+    <meta name="author" content="Allan Matos Gomes de Sousa" itemprop="author">
+    <title>Allan Matos Gomes de Sousa | WDD 130</title>
+</head>
+<body>
+    <header>
+        <nav>
+            <a href="#">Home</a>
+            <a href="wwr/">Rafting Website</a>
+            <a href="wwr/site-plan-rafting.html">Siteplan</a>
+            <a href="https://www.linkedin.com/posts/activity-7040505867439390720-WBY3?utm_source=share&utm_medium=member_desktop">Linkedin</a>
+            <a href="https://www.facebook.com/profile.php?id=100051349933866">facebook</a>
+        </nav>
+    </header>
+    <div class="grid">
+        <main>
+            <h1>Allan Matos Gomes de Sousa | WDD 130</h1>
+            <img src="images/profile.png" alt = "Allan Matos Gomes de Sousa" width="200">
+            <p>  ' ' 'Hello, my name is Allan, I'm a Brazilian 18 years boy who enjoys being a computer science student! Practice sports is my hobbie, at this moment my favorite one is muytay!
+                I'm panning to serve a mission for 2 years next year! I know that tecnology is an area that will grow even more, many working  employments will come and I'm preparing myself 
+                studing this area. I confess myself that since last year I hadn't a contact with computers or something tecnologic but I rtealized that I needed to have more aproximattion 
+                with this area, never is too late to learn a new thing right?! and I don't want to get behind! enchendpo linguissa enchendpo linguissa enchendpo linguissa enchendpo linguissa enchendpo linguissa enchendpo linguissa
+            </p>
+            <ul class="box">
+                <li><a href="https://www.churchofjesuschrist.org/temples/details/recife-brazil-temple?lang=eng" target="_blank">Recife Brazil Temple</a></li>
+                <li><a href="https://www.churchofjesuschrist.org/temples/details/los-angeles-california-temple?lang=eng" target="_blank">Los Angeles California Temple</a></li>
+                <li><a href="https://www.churchofjesuschrist.org/temples/details/salt-lake-temple?lang=eng" target="_blank">Salt Lake Temple</a></li>
+            </ul>
+        </main>
+        <aside class="box">
+            <h2>Brazil</h2>
+            <img src="images/brazil.png" alt="Brazil image">
+            <p>Brazil is an american south country, we were colonized for many nations in the past and because of this we have a huge arsenal of differents cultures and this makes a beautiful diferrence!</p>
+        </aside>
+    </div>
+    <footer>
+        <p>&copy;2024 🐘 Allan Matos 🐘 Paraíba, Brazil</p>
+    </footer>
+</body>
+<!--29/09/2023-->
 </html>
