--- a/wwr/about.html
+++ b/wwr/about.html
@@ -54,33 +54,33 @@
             </section>
             <section class="box">
                 <h2 class="pix">Adventure Awaits You!</h2>
-                <figure>
-                    <img class="img1" src="images/img1.png" alt="White Water Rafting1">
+                <figure class="img1">
+                    <img src="images/img1.png" alt="White Water Rafting1">
                 </figure>
-                <figure>
-                    <img class="img2" src="images/img2.png" alt="White Water Rafting2">
+                <figure class="img2">
+                    <img src="images/img2.png" alt="White Water Rafting2">
                 </figure>
-                <figure>
-                    <img class="img3" src="images/img3.png" alt="White Water Rafting3">
+                <figure class="img3">
+                    <img src="images/img3.png" alt="White Water Rafting3">
                 </figure>
-                <figure>
-                    <img class="img4" src="images/img4.png" alt="White Water Rafting4">
+                <figure class="img4">
+                    <img src="images/img4.png" alt="White Water Rafting4">
                 </figure>
-                <figure>
-                    <img class="img5" src="images/img5.png" alt="White Water Rafting5">
+                <figure class="img5">
+                    <img src="images/img5.png" alt="White Water Rafting5">
                 </figure>
             </section>
         </main>
         <footer>
             <p>&copy;2023 🚣‍♂️ Rafting Team 🚣‍♂️ Allan Matos </p>
             <a href="https://facebook.com">
-                <img src="images/facebook.svg" alt="Facebook img">
+                <img src="images/facebook.png" alt="Facebook img">
             </a>
             <a href="https://twiter.com">
-                <img src="images/twiter.svg" alt="Twitter img">
+                <img src="images/twiter.png" alt="Twitter img">
             </a>
             <a href="https://instagram.com">
-                <img src="images/instagram.svg" alt="Instagram.svg">
+                <img src="images/instagram.png" alt="Instagram.svg">
             </a>           
         </footer>
     </body>
