--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
     <head>
         <meta charset="utf-8">
-        <link rel="stylesheet" href="styles/rafting.css">
+        <link rel="stylesheet" href="styles/site-plan-rafting.css">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title> Rafting Site Plan | Allan Matos</title>
         <meta name="author" content="Allan Matos">
@@ -10,7 +10,7 @@
     </head>
     <body>
         <header>
-            <h1>Rafting Team</h1>
+            <h1>Rafting Site Plan</h1>
             <div>Allan Matos</div>
         </header>
         <main>
@@ -18,6 +18,7 @@
 
             <h3>Purpose</h3>
             <p>Our purpose is to give the best experice for the rafting enthusiasts providing trios aimed at rafting practicing  with the best cost-benefit ratio.</p>
+            
             <h3>Audience</h3>
             <p>We intended to provide this sperience to the ones who already has a knowledge on the sport, but we also have some plans to the ones who are seeking to learn in a real scenerio the wonderfull sport, the unique difference is that this type os plan will cost more than the others ones because we provide teachers.</p>
 
@@ -29,29 +30,34 @@
             <h2>Style Guide</h2>
 
             <h3>Color Palette</h3>
-            <p>Sky blue-#DE2FC
-               Dark purple-#B8B3BE
-               Black-#000000
-               Jungle green-#29AB87
-               Palette URL: <a href="https://coolors.co/5de2fc-29ab87-000000-301934-b8b3be" target="_blank">https://coolors.co/5de2fc-29ab87-000000-301934-b8b3be</a>
+            <p>primary color = verde-turquesa #29AB87
+               secondary-color = verde claro rgb(4, 151, 4)
+               --accent1-color: white #fff;
+               --accent2-color: black #000;
             </p>
+
             <h3>Typography</h3>
+
             <h4>Headings Exemple Font - Rock Salt</h4>
             <h4>Normal Text/Paragraph Exemple Font</h4>
             <p>Exemple text - Roboto</p>
             <h4>Colored Callout Exemple Font</h4>
             <p>Exemple text - Roboto</p>
+
             <h3>Navigation</h3>
+
             <nav>
                 <a href="#">Home</a>
-                <a href="about.html">About Us</a>
+                <a href="#">About Us</a>
                 <a href="#">Trips</a>
                 <a href="#"> Contact Us</a>
             </nav>
 
             <h2>Wireframes</h2>
+
             <h3>Home Page Wireframe</h3>
             <img src="https://byu-cse.github.io/wdd130-ww-course/images/wwr/wwr-wireframe-home.png" alt="Home Page Wireframe Example Design" width="700">
+            
             <h3>About Us Page Wireframe</h3>
             <img src="https://byu-cse.github.io/wdd130-ww-course/images/wwr/wwr-wireframe-aboutus-update.png"
             alt="About Us Page Wireframe Design" width="700">
