--- a/indexx.html
+++ b/indexx.html
@@ -11,7 +11,7 @@
     <body>
         <header>
             <nav>
-                <a href="#">Home</a>
+                <a href="#">Homee</a>
                 <a href="wwr/">White Water Rafting Website</a>
                 <a href="wwr/site-plan-rafting.html">White Water Rafting Siteplan</a>
             </nav>
