--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <nav>
-            <a href="#">Homee</a>
+            <a href="#">Home</a>
             <a href="wwr/">Rafting Website</a>
             <a href="wwr/site-plan-rafting.html">Siteplan</a>
             <a href="https://www.linkedin.com/posts/activity-7040505867439390720-WBY3?utm_source=share&utm_medium=member_desktop">Linkedin</a>
