--- a/quiz.html
+++ b/quiz.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width">
     <meta name="description" content="Form quiz from week 05 activity ">
     <meta name="author" content="Allan Matos Gomes de Sousa" itemprop="author">
-    <title>Questions about HTML</title>
+    <title>Quiz about HTML and CSS</title>
 </head>
 <body>
     <form>
