--- a/quiz.html
+++ b/quiz.html
@@ -4,7 +4,7 @@
     <link href="styles/quiz.css" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width">
-    <meta name="description" content="Quiz Form">
+    <meta name="description" content="Form quiz from week 05 activity ">
     <meta name="author" content="Allan Matos Gomes de Sousa" itemprop="author">
     <title>Quiz about HTML and CSS</title>
 </head>
