--- a/quiz.html
+++ b/quiz.html
@@ -5,14 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width">
     <meta name="description" content="Form quiz from week 05 activity ">
-    <meta name="author" content="Allan Matos Gomes de Sousa" itemprop="author">
+    <meta name="author" content="Allan Matos Gomes de Sousa">
     <title>Quiz about HTML and CSS</title>
 </head>
 <body>
     <form>
         <h1>Questions about HTML</h1>
         <label for="q1">What part of an HTML code will be visually displayed on the user's page?</label>
-        <input type="text" id="q1" name="q1"/>
+        <input type="text" id="q1" name="q1">
 
         <label for="q2">Why and what are CSS files connected with HTML files?</label>
         <textarea id="q2" name="q2"></textarea>
