--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <link href="styles/style.css" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width">
-    <meta name="description" content="Hello, my name is Allan, currently I'm taking the WDD 130 course at BYU online university. The purpose of this page is to give a brief description of myself." itemprop="description">
-    <meta name="author" content="Allan Matos Gomes de Sousa" itemprop="author">
+    <meta name="description" content="Hello, my name is Allan, currently I'm taking the WDD 130 course at BYU online university. The purpose of this page is to give a brief description of myself.">
+    <meta name="author" content="Allan Matos Gomes de Sousa">
     <title>Allan Matos Gomes de Sousa | WDD 130</title>
 </head>
 <body>
