--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -4,9 +4,9 @@
         <link href="styles/rafting.css" rel="stylesheet" />
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width">
-        <meta name="description" content="This is the about us page, here you will find more recourses about our companny!">
+        <meta name="description" content="This is the contact page. Here you will find help and our company contacts">
         <meta name="author" content="Allan Matos Gomes de Sousa">
-        <title> About Us</title>
+        <title>Contact</title>
     </head>
     <body>
         <!-- OK-->
@@ -24,25 +24,21 @@
         <!-- -->
         <main>
             <div>
-                <h1>Rafting Team</h1>
-                <img class="hero" src="images/img3.png" alt="Hero">
+                
                 <article>
-                    <img src="images/teacher.png" alt="Happy Instructor">
-                    <p> element with the company purpose, mission, creed, motto, etc. ele-
-                        ment with the company purpose, mission, creed, motto, etc element 
-                        with the company purpose, mission, creed, motto, etc element with 
-                        the company purpose, mission, creed, motto, etc element with the 
-                        company purpose, mission, creed, motto, etc element with the compa-
-                        ny purpose, mission, creed, motto, etc element with the company pur-
-                        pose, mission, creed, motto, etc element with the company purpose, 
-                        mission, creed, motto, etc element with the company purpose, mission, 
-                        creed, motto, etc element with the company purpose, mission, creed, 
-                        smotto, etc</p>
+                    <h1>Employee of the Month: Scoot Cooper</h1>
+                    <img src="images/professonal3.png" alt="Employee of the month">
+                    <h1>President of the company</h1>
+                    <img src="images/professonal2.png" alt="">
+                    <h1>Vice President of the company</h1>
+                    <img src="images/professonal1.png" alt="Happy Instructor">
+                    
+
                 </article>
             </div>
             <section class="box">
                 <h2>History</h2>
-                <img class="logo" src="images/logo.png" alt="Logo">
+                <img src="images/logo.png" alt="Logo">
                 <p>element with a brief history of the company element with a brief history
                    of the company element with a brief history of the company element with 
                    a brief history of the company element with a brief history of the com-
