--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-US">
 <head>
-    <link href="style.css" rel="stylesheet">
+    <link href="styles/style.css" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width">
     <meta name="description" content="Hello, my name is Allan, currently I'm taking the WDD 130 course at BYU online university. The purpose of this page is to give a brief description of myself.">
@@ -21,7 +21,7 @@
     <div class="grid">
         <main>
             <h1>Allan Matos Gomes de Sousa | WDD 130</h1>
-            <img src="images/profile.png" alt = "Allan Matos Gomes de Sousa" width="200">
+            <img src="images/profile.png" alt = "Allan Matos Gomes de Sousa">
             <p>  ' ' 'Hello, my name is Allan, I'm a Brazilian 18 years boy who enjoys being a computer science student! Practice sports is my hobbie, at this moment my favorite one is muytay!
                 I'm panning to serve a mission for 2 years next year! I know that tecnology is an area that will grow even more, many working  employments will come and I'm preparing myself 
                 studing this area. I confess myself that since last year I hadn't a contact with computers or something tecnologic but I rtealized that I needed to have more aproximattion 
