--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -17,10 +17,17 @@
             <h2>Overview</h2>
 
             <h3>Purpose</h3>
-            <p>Our purpose is to give the best experice for the rafting enthusiasts providing trios aimed at rafting practicing  with the best cost-benefit ratio.</p>
+            <p>Our purpose is to give the best experice for the rafting enthusiasts 
+                providing trios aimed at rafting practicing  with the best cost-benefit 
+                ratio. </p>
             
             <h3>Audience</h3>
-            <p>We intended to provide this sperience to the ones who already has a knowledge on the sport, but we also have some plans to the ones who are seeking to learn in a real scenerio the wonderfull sport, the unique difference is that this type os plan will cost more than the others ones because we provide teachers.</p>
+            <p> For what tipe of people we offer rafting trips? R: We intended to provide the rafting
+                sperience to the ones who already has a knowledge about the sport. I don`t have any kwoledge 
+                in the rafting world, but I want to learn, do I am in the rigth company? R: Yes! We also have
+                some plans to the ones who are seeking to learn rafting. Does a plan have the same cost even if I`m
+                one who wants a plan to learn rafting? R: No, this type of plan will cost more than the others 
+                ones because we provide more teachers in this plan.</p>
 
             <h2>Branding</h2>
 
