--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -22,12 +22,16 @@
                 ratio. </p>
             
             <h3>Audience</h3>
-            <p> For what tipe of people we offer rafting trips? R: We intended to provide the rafting
-                sperience to the ones who already has a knowledge about the sport. I don`t have any kwoledge 
-                in the rafting world, but I want to learn, do I am in the rigth company? R: Yes! We also have
-                some plans to the ones who are seeking to learn rafting. Does a plan have the same cost even if I`m
-                one who wants a plan to learn rafting? R: No, this type of plan will cost more than the others 
-                ones because we provide more teachers in this plan.</p>
+            <p>
+               We intended to provide this sperience to the ones who already has a knowledge
+               on the sport, our offers trips can attend all the necessities of the ones who
+               has a hobbie in rafting. We provide great places ideal for rafting, good 
+               accommodation with excellent quality dormitories. Also we are the right Company
+               to the ones who doesn`t have all rafting equipamens, we have a great arsenal of 
+               equipamens witing for you.
+               Who are the target customers?
+               What do they want?
+               What are their needs that aren't being met? 
 
             <h2>Branding</h2>
 
