--- a/wwr/about.html
+++ b/wwr/about.html
@@ -14,10 +14,10 @@
             <img src="images/logo.png" alt="Logo">
             <nav>
                 <ul class="navigation">
-                    <a href="index.html">Home Page</a>
-                    <a href="about.html">About Us</a>
-                    <a href="trips.html">Trips</a>
-                    <a href="contact.html">Contact</a>
+                    <li><a href="index.html">Home Page</a></li>
+                    <li><a href="about.html">About Us</a></li>
+                    <li><a href="trips.html">Trips</a></li>
+                    <li><a href="contact.html">Contact</a></li>
                 </ul>
             </nav>
         </header>
