--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width">
         <meta name="description" content="This is the about us page, here you will find more recourses about our companny!">
         <meta name="author" content="Allan Matos Gomes de Sousa">
-        <title> About Us</title>
+        <title>Contact Rafting Team</title>
     </head>
     <body>
         <!-- OK-->
@@ -36,7 +36,7 @@
             <h1 class="one">Find Us</h1>
                 <p class="one">Adress: Main Street, 2365A, Walnut Creek, CA</p>
                 <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d113088.6026079245!2d-122.11151386076997!3d37.89647766591978!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1spt-BR!2sbr!4v1697686412836!5m2!1spt-BR!2sbr" 
-                width="340" height="245" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                width="340" height="245" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             <h1 class="two">Send a Message</h1>
                 <p class="two">Phone: 000-000-00</p>
                 <p class="twoa">Email: raftingteamcontact@gmail.com</p>
