--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -62,7 +62,7 @@
             <input type="checkbox" id="subscribe" name="subscribe" value="yes">
             <label for="subscribe">Please subscribe me to the monthly newsletter</label>
         
-            <input type="submit" value="Submit">
+            <input type="button" value="Submit">
         </form>
         
         </main>
