--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -4,9 +4,9 @@
         <link href="styles/rafting.css" rel="stylesheet">
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width">
-        <meta name="description" content="This is the about us page, here you will find more recourses about our companny!">
+        <meta name="description" content="This is the contact page. Here you will find how to contact with us!">
         <meta name="author" content="Allan Matos Gomes de Sousa">
-        <title>Contact Rafting Team</title>
+        <title>Rafting Team Contact</title>
     </head>
     <body>
         <!-- OK-->
